[package]
name = "rocket_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.2.4", default-features = false }
serde_json = "1.0"
chrono = "0.4"
lazy_static = "1.0.0"
rust-crypto = "0.2.36"
sqlite = "0.27.0"
toml = "0.5.9"

[profile.dev]
opt-level = 0

[profile-release]
opt-level = 3
