[package]
name = "rocket_atom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "tls", "json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3.26", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
chrono = "0.4"
lazy_static = "1.4.0"
rust-crypto = "0.2.36"
sqlite = "0.27.0"
toml = "0.5.9"
log = "0.4.8"
log4rs = "1.1.1"
async-trait = "0.1.57"

[profile.dev]
opt-level = 0

[profile-release]
opt-level = 3
